# PersonaAI

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  index.jsx  package-lock.json  package.json  tailwind.config.js  vercel.json
backend/: .env.example  .railwayignore  Dockerfile  alembic.ini  mcp_server.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 8face9e20e12_add_name_country_to_personas.py  a1b2c3d4e5f6_add_deep_persona_fields.py  a7b8c9d0e1f2_add_is_default_to_personas.py  b1c2d3e4f5a6_remove_legacy_fields.py  c2d3e4f5a6b7_add_name_to_personas.py  d3e4f5a6b7c8_add_persona_chat_tables.py  e4f5a6b7c8d9_add_users_table.py  f5a6b7c8d9e0_add_user_id_to_all_tables.py  g6b7c8d9e0f1_replace_feedback_fields_writer_focus.py  h7c8d9e0f1g2_add_media_fit_title_feedback.py  i8d9e0f1g2h3_add_media_info_to_project_settings.py  j9e0f1g2h3i4_add_completed_feedback_count_to_simulations.py  k0f1g2h3i4j5_add_persona_created_at_index.py  l1g2h3i4j5k6_add_what_failed_to_feedbacks.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py  feedback.py  persona.py  persona_pool.py  project.py  scrape.py  simulation.py
backend/app/core/: config.py  database.py  security.py
backend/app/data/: default_personas.py  taxonomy.json
backend/app/models/: chat.py  persona.py  project.py  simulation.py  user.py
backend/app/prompts/: extraction_prompts.py  feedback_roles.py  insight_generation.py  narrative_prompts.py  (+2 more)
backend/scripts/: .batch_state.json  seed_default_personas.py  seed_personas.py  seed_personas_batch.py  update_names.py
(+18 files in other folders)
